add JAVA_OPTS support for runtime